Fix overlap bug with dropdowns and WYSIWYG, sort sidebar menu

--- a/app/assets/stylesheets/cohesive_admin/theme/_forms.scss
+++ b/app/assets/stylesheets/cohesive_admin/theme/_forms.scss
@@ -34,4 +34,5 @@
       transform: translateY(-140%);
     }
   }
+  .dropdown-content { z-index: 1000; }
 }
